--- a/iclr-paper.bib
+++ b/iclr-paper.bib
@@ -3,10 +3,7 @@
                Ilya Sutskever and
                Geoffrey E. Hinton},
   title     = {ImageNet Classification with Deep Convolutional Neural Networks},
-  booktitle = {Advances in Neural Information Processing Systems 25: 26th Annual
-               Conference on Neural Information Processing Systems 2012. Proceedings
-               of a meeting held December 3-6, 2012, Lake Tahoe, Nevada, United States.},
-  pages     = {1106--1114},
+  booktitle = {NIPS},
   year      = {2012},
 }
 
@@ -15,68 +12,44 @@
                N. Jaitly and
                A.{-}r. Mohamed},
   title     = {Hybrid speech recognition with Deep Bidirectional {LSTM}},
-  //booktitle = {2013 {IEEE} Workshop on Automatic Speech Recognition and Understanding,
-               Olomouc, Czech Republic, December 8-12, 2013},
-  booktitle = {2013 {IEEE} Workshop on Automatic Speech Recognition and Understanding},
-  pages     = {273--278},
-  year      = {2013},
-  crossref  = {DBLP:conf/asru/2013},
-  //url       = {http://dx.doi.org/10.1109/ASRU.2013.6707742},
-  //doi       = {10.1109/ASRU.2013.6707742},
-  timestamp = {Mon, 13 Jan 2014 19:28:28 +0100},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/asru/GravesJM13},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
+  booktitle = {{IEEE} Workshop on Automatic Speech Recognition and Understanding},
+  year      = {2013}
 }
 
 @inproceedings{russ_dbm,
   author    = {Ruslan Salakhutdinov and
                Geoffrey E. Hinton},
   title     = {Deep Boltzmann Machines},
-  booktitle = {Proceedings of the Twelfth International Conference on Artificial
-               Intelligence and Statistics, {AISTATS} 2009, Clearwater Beach, Florida,
-               USA, April 16-18, 2009},
-  pages     = {448--455},
-  year      = {2009},
-  crossref  = {DBLP:conf/aistats/2009},
-  url       = {http://www.jmlr.org/proceedings/papers/v5/salakhutdinov09a.html},
-  timestamp = {Thu, 11 Sep 2014 07:28:56 +0200},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/jmlr/SalakhutdinovH09},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
+  booktitle = {AISTATS},
+  year      = {2009}
 }
 
-@article{kingma_vae,
+@inproceedings{kingma_vae,
   author    = {Diederik P. Kingma and
                Max Welling},
   title     = {Auto-Encoding Variational Bayes},
-  journal   = {CoRR},
-  volume    = {abs/1312.6114},
-  year      = {2013},
-  url       = {http://arxiv.org/abs/1312.6114},
-  timestamp = {Mon, 06 Jan 2014 15:10:41 +0100},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/KingmaW13},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
+  booktitle = {ICLR},
+  year      = {2014}
 }
 
-@article{gregor_draw,
+@inproceedings{gregor_draw,
   author    = {Karol Gregor and Ivo Danihelka and Alex Graves and Daan Wierstra},
   title     = {{DRAW:} {A} Recurrent Neural Network For Image Generation},
-  journal   = {CoRR},
-  volume    = {abs/1502.04623},
+  booktitle = {ICML},
   year      = {2015},
 }
 
-@incollection{ilya_mt,
-  author = {Sutskever, Ilya and Vinyals, Oriol and Le, Quoc V. V},
+@inproceedings{ilya_mt,
+  author = {Ilya Sutskever and Oriol Vinyals and Quoc V. Le},
   title = {Sequence to Sequence Learning with Neural Networks},
-  booktitle = {Advances in Neural Information Processing Systems 27},
-  pages = {3104--3112},
-  year = {2014},
+  booktitle = {NIPS},
+  year = {2014}
 }
 
-@article{nitish_video,
+@inproceedings{nitish_video,
   author    = {Nitish Srivastava and Elman Mansimov and Ruslan Salakhutdinov},
   title     = {Unsupervised Learning of Video Representations using {LSTM}s},
-  journal   = {ICML},
+  booktitle = {ICML},
   year      = {2015}
 }
 
@@ -84,9 +57,8 @@
   author    = {Kyunghyun Cho and Bart van Merrienboer and {\c{C}}aglar G{\"{u}}l{\c{c}}ehre and
                Dzmitry Bahdanau and Fethi Bougares and Holger Schwenk and Yoshua Bengio},
   title     = {Learning Phrase Representations using {RNN} Encoder-Decoder for Statistical Machine Translation},
-  booktitle = {Proceedings of the 2014 Conference on Empirical Methods in Natural Language Processing, {EMNLP} 2014},
-  pages     = {1724--1734},
-  year      = {2014},
+  booktitle = {EMNLP},
+  year      = {2014}
 }
 
 @article{hinton_dbn,
@@ -95,15 +67,7 @@
                Yee Whye Teh},
   title     = {A Fast Learning Algorithm for Deep Belief Nets},
   journal   = {Neural Computation},
-  volume    = {18},
-  number    = {7},
-  pages     = {1527--1554},
   year      = {2006},
-  url       = {http://dx.doi.org/10.1162/neco.2006.18.7.1527},
-  doi       = {10.1162/neco.2006.18.7.1527},
-  timestamp = {Thu, 17 Nov 2011 16:24:23 +0100},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/neco/HintonOT06},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
 @inproceedings{goodfellow_gan,
@@ -116,16 +80,8 @@
                Aaron C. Courville and
                Yoshua Bengio},
   title     = {Generative Adversarial Nets},
-  booktitle = {Advances in Neural Information Processing Systems 27: Annual Conference
-               on Neural Information Processing Systems 2014, December 8-13 2014,
-               Montreal, Quebec, Canada},
-  pages     = {2672--2680},
-  year      = {2014},
-  crossref  = {DBLP:conf/nips/2014},
-  url       = {http://papers.nips.cc/paper/5423-generative-adversarial-nets},
-  timestamp = {Wed, 10 Dec 2014 21:34:12 +0100},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/nips/GoodfellowPMXWOCB14},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
+  booktitle = {NIPS},
+  year      = {2014}
 }
 
 @inproceedings{gutmann_nce,
@@ -133,32 +89,19 @@
                Aapo Hyv{\"{a}}rinen},
   title     = {Noise-contrastive estimation: {A} new estimation principle for unnormalized
                statistical models},
-  booktitle = {Proceedings of the Thirteenth International Conference on Artificial
-               Intelligence and Statistics, {AISTATS} 2010, Chia Laguna Resort, Sardinia,
-               Italy, May 13-15, 2010},
-  pages     = {297--304},
-  year      = {2010},
-  crossref  = {DBLP:conf/aistats/2010},
-  url       = {http://www.jmlr.org/proceedings/papers/v9/gutmann10a.html},
-  timestamp = {Thu, 11 Sep 2014 07:28:56 +0200},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/jmlr/GutmannH10},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
+  booktitle = {AISTATS},
+  year      = {2010}
 }
 
-@article{denton_lapgan,
+@inproceedings{denton_lapgan,
   author    = {Emily L. Denton and
                Soumith Chintala and
                Arthur Szlam and
                Robert Fergus},
   title     = {Deep Generative Image Models using a Laplacian Pyramid of Adversarial
                Networks},
-  journal   = {CoRR},
-  volume    = {abs/1506.05751},
-  year      = {2015},
-  url       = {http://arxiv.org/abs/1506.05751},
-  timestamp = {Wed, 01 Jul 2015 15:10:24 +0200},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/DentonCSF15},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
+  booktitle = {NIPS},
+  year      = {2015}
 }
 
 @article{smolensky_rbm,
@@ -168,30 +111,27 @@
   year      = {1986},
 }
 
-@article{bachman_sdm,
+@article{krizhevsky_cifar,
+  author    = {Alex Krizhevsky},
+  title     = {Learning multiple layers of features from tiny images},
+  journal   = {Master's Thesis, Department of Computer Science, University of Toronto},
+  year      = {2009},
+}
+
+@inproceedings{bachman_sdm,
   author    = {Philip Bachman and
                Doina Precup},
   title     = {Data Generation as Sequential Decision Making},
-  journal   = {CoRR},
-  volume    = {abs/1506.03504},
-  year      = {2015},
-  url       = {http://arxiv.org/abs/1506.03504},
-  timestamp = {Wed, 01 Jul 2015 15:10:24 +0200},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/BachmanP15},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
+  booktitle = {NIPS},
+  year      = {2015}
 }
 
-@article{karpathy_captions,
+@inproceedings{karpathy_captions,
   author    = {Andrej Karpathy and
                Fei{-}Fei Li},
   title     = {Deep Visual-Semantic Alignments for Generating Image Descriptions},
-  journal   = {CoRR},
-  volume    = {abs/1412.2306},
-  year      = {2014},
-  url       = {http://arxiv.org/abs/1412.2306},
-  timestamp = {Mon, 01 Jun 2015 08:26:33 +0200},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/KarpathyF14},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
+  booktitle = {CVPR},
+  year      = {2015}
 }
 
 @inproceedings{xu_captions,
@@ -205,15 +145,8 @@
                Yoshua Bengio},
   title     = {Show, Attend and Tell: Neural Image Caption Generation with Visual
                Attention},
-  booktitle = {Proceedings of the 32nd International Conference on Machine Learning,
-               {ICML} 2015, Lille, France, 6-11 July 2015},
-  pages     = {2048--2057},
-  year      = {2015},
-  crossref  = {DBLP:conf/icml/2015},
-  url       = {http://jmlr.org/proceedings/papers/v37/xuc15.html},
-  timestamp = {Sun, 05 Jul 2015 19:10:23 +0200},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/icml/XuBKCCSZB15},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
+  booktitle = {ICML},
+  year      = {2015}
 }
 
 @article{kiros_captions,
@@ -224,41 +157,86 @@
                Models},
   journal   = {CoRR},
   volume    = {abs/1411.2539},
-  year      = {2014},
-  url       = {http://arxiv.org/abs/1411.2539},
-  timestamp = {Mon, 01 Dec 2014 14:32:13 +0100},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/KirosSZ14},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
+  year      = {2014}
 }
 
 @inproceedings{russ_binarizedmnist,
   author    = {Ruslan Salakhutdinov and
                Iain Murray},
   title     = {On the quantitative analysis of deep belief networks},
-  booktitle = {Machine Learning, Proceedings of the Twenty-Fifth International Conference
-               {(ICML} 2008), Helsinki, Finland, June 5-9, 2008},
-  pages     = {872--879},
-  year      = {2008},
-  crossref  = {DBLP:conf/icml/2008},
-  url       = {http://doi.acm.org/10.1145/1390156.1390266},
-  doi       = {10.1145/1390156.1390266},
-  timestamp = {Thu, 14 Aug 2008 13:58:39 +0200},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/icml/SalakhutdinovM08},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
+  booktitle = {ICML},
+  year      = {2008}
 }
 
 @inproceedings{mscoco,
   author    = {Lin, T.Y. and Maire, M. and Belongie, S. and Hays, J. and Perona, P. and Ramanan, D. and Doll{\'a}r, P. and Zitnick, C. L.},
   title     = {Microsoft {COCO}: Common Objects in Context},
   booktitle = {ECCV},
-  year      = {2014},
+  year      = {2014}
 }
 
-@article{bahdanau_mt,
+@inproceedings{bahdanau_mt,
   author    = {D. Bahdanau and
                K. Cho and
                Y. Bengio},
   title     = {Neural Machine Translation by Jointly Learning to Align and Translate},
-  journal   = {ICLR},
+  booktitle = {ICLR},
   year      = {2015}
+}
+
+@inproceedings{vinyals_captions,
+  author    = {Oriol Vinyals and
+               Alexander Toshev and
+               Samy Bengio and
+               Dumitru Erhan},
+  title     = {Show and tell: {A} neural image caption generator},
+  booktitle = {CVPR},
+  year      = {2015}
+}
+
+@inproceedings{kiros_skipthought,
+  author    = {Ryan Kiros and
+               Yukun Zhu and
+               Ruslan Salakhutdinov and
+               Richard S. Zemel and
+               Antonio Torralba and
+               Raquel Urtasun and
+               Sanja Fidler},
+  title     = {Skip-Thought Vectors},
+  booktitle = {NIPS},
+  year      = {2015}
+}
+
+@inproceedings{simonyan_convnet,
+  author    = {Karen Simonyan and
+               Andrew Zisserman},
+  title     = {Very Deep Convolutional Networks for Large-Scale Image Recognition},
+  booktitle = {ICLR},
+  year      = {2015}
+}
+
+@article{wang_ssi,
+  author    = {Zhou Wang and
+               Alan C. Bovik and
+               Hamid R. Sheikh and
+               Eero P. Simoncelli},
+  title     = {Image quality assessment: from error visibility to structural similarity},
+  journal   = {{IEEE} Transactions on Image Processing},
+  year      = {2004}
+}
+
+@article{theano,
+  author    = {Fr{\'{e}}d{\'{e}}ric Bastien and
+               Pascal Lamblin and
+               Razvan Pascanu and
+               James Bergstra and
+               Ian J. Goodfellow and
+               Arnaud Bergeron and
+               Nicolas Bouchard and
+               David Warde{-}Farley and
+               Yoshua Bengio},
+  title     = {Theano: new features and speed improvements},
+  journal   = {CoRR},
+  volume    = {abs/1211.5590},
+  year      = {2012}
 }
