--- a/supp.tex
+++ b/supp.tex
@@ -3,7 +3,7 @@
 
 \subsection{Hyperparameters}
 
-Each parameter in alignDRAW was initialized by sampling from the Gaussian distribution of mean $0$ and standard deviation of $0.01$. The model was trained using \textit{RMSProp} with initial learning rate of $0.001$. The norm of the gradients was clipped to $10.0$ during training to deal with exploding gradients. For all tasks we used $128$ units in the language model and $512$ units in the $tanh$ perceptron in the alignment function. For the Microsoft COCO task, the alignDRAW model was trained for $18$ epochs (the model converges after $14$ epochs) and the learning rate was reduced by the factor of $0.1$ after $11$ epochs. The architectural configurations of alignDRAW models are shown on Table~\ref{tab:drawhyper}.
+Each parameter in alignDRAW was initialized by sampling from the Gaussian distribution of mean $0$ and standard deviation of $0.01$. The model was trained using \textit{RMSProp} with initial learning rate of $0.001$. The norm of the gradients was clipped to $10.0$ during training to deal with exploding gradients. For all tasks we used $128$ units in the language model and $512$ units in the $tanh$ perceptron in the alignment function. For the Microsoft COCO task, the alignDRAW model was trained for $18$ epochs and the learning rate was reduced by the factor of $0.1$ after $11$ epochs. The architectural configurations of alignDRAW models are shown on Table~\ref{tab:drawhyper}.
 
 \begin{table}[!h]
 \begin{center}
@@ -16,9 +16,9 @@ Task & \#glimpses & Inference \#$h$ & Generative \#$h$ & \#$z$ & Read Size & Wri
 Microsoft COCO & 32 & 550 & 550 & 275 & 9 & 9\\
 MNIST Captions & 32 & 300 & 300 & 150 & 8 & 8\\
 \end{tabulary}
-\end{center}
-\label{tab:drawhyper}
 \caption{The architectural configurations of alignDRAW models.}
+\label{tab:drawhyper}
+\end{center}
 %\vspace{-0.3cm}
 \end{table}
 
@@ -38,7 +38,7 @@ skipthoughtDRAW & -1794.29 & -1797.41 & -1791.37 & -2045.84 \\
 noalignDRAW & -1792.14 & -1796.94 & -1791.15 & -2051.07 \\
 alignDRAW & -1792.15 & -1797.24 & -1791.53 & -2042.31
 \end{tabulary}
-\end{center}
-\label{tab:nll}
 \caption{The lower bound of log likelihood of conditional DRAW models on the Microsoft COCO.}
+\label{tab:nll}
+\end{center}
 \end{table}
